# Mapr3D

./: .gitignore  Mapr3D.command  README.md  run.sh
.claude/: launch.json
backend/: .env.example  pyproject.toml
backend/mapr3d/: __init__.py  main.py  models.py
backend/mapr3d/api/: routes.py
backend/mapr3d/dem/: __init__.py  geo.py  resolver.py  sources.py
backend/mapr3d/features/: __init__.py  osm.py
backend/mapr3d/mesh/: __init__.py  geometry.py  scene.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Inspector.tsx  MapPanel.tsx  ObjectPanel.tsx  SceneMesh.tsx  Settings.tsx  StudioViewport.tsx
frontend/src/state/: store.ts
